Update 'w9k96b0n3-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:7c5f504eefdf53622f7c2986dfc8d499866772b5@sha256:63d29eb74e62d9f4a06999377c858605e29be3a466acacb022cb5806243e4666

--- a/components/w9k96b0n3-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/w9k96b0n3-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: w9k96b0n3-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:7c5f504eefdf53622f7c2986dfc8d499866772b5@sha256:63d29eb74e62d9f4a06999377c858605e29be3a466acacb022cb5806243e4666
+          name: container-image
